# ohm-plugins-misc

./: .gitignore  COPYING  Makefile.am  acinclude.m4  aminclude.am  autogen.sh  configure.ac  configure.in
doc/: Doxyfile  Makefile.am
doc/accessories/lyx/: accessories_plugin.lyx  prefix
doc/console/lyx/: console_plugin.lyx  prefix
doc/hal/lyx/: hal_plugin.lyx  prefix
doc/playback/lyx/: playback_plugin.lyx  playback_state_machine.fig  prefix
doc/profile/lyx/: prefix  profile_plugin.lyx
doc/signaling/lyx/: prefix  signaling_plugin.lyx
ohm-session-agent/: 10kick-ohm-agent  10ohm-session-agent  55ohm-session-agent  Makefile.am  ohm-session-agent.c  ohm-session-agent.conf  ohm-session-agent.service  org.Maemo.Playback.Manager  org.freedesktop.ohm-session-agent.service  org.freedesktop.ohm_session_agent.service  org.maemo.Playback.Manager.service
plugins/: Makefile.am
plugins/accessories/: Makefile.am  accessories.c  accessories.h  bluetooth-bluez4.c  bluetooth-bluez5.c  bluetooth-common.c  bluetooth-common.h  bluetooth.c  bluetooth.h  gconf-triggers.c  gconf-triggers.h  headset.c  hearing-aid-coil.c  hearing-aid-coil.h  wired.c  wired.h
plugins/apptrack/: Makefile.am  apptrack-test.c  apptrack.c  apptrack.h
plugins/auth/: Makefile.am  auth-creds.c  auth-creds.h  auth-request.c  auth-request.h  auth-test.c  dbusif.c  dbusif.h  plugin.c  plugin.h
plugins/backlight/: Makefile.am  backlight-driver-mce.c  backlight-driver-null.c  backlight-ep.c  backlight-plugin.c  backlight-plugin.h  backlight.ini  visibility.h
plugins/buttons/: Makefile.am  buttons.c  buttons.h  dresif.c  dresif.h  event.c  event.h
plugins/cgroups/: Makefile.am  cgroups.ini  cgrp-action.c  cgrp-apptrack.c  cgrp-basic-types.h  cgrp-classify.c  cgrp-config.y  cgrp-console.c  cgrp-curve.c  cgrp-ep.c  cgrp-eval.c  cgrp-fact.c  cgrp-facts.c  cgrp-group.c  cgrp-hash.c  cgrp-leader.c  cgrp-lexer.l  cgrp-notify.c  cgrp-parser-types.h  cgrp-partition.c  cgrp-plugin.c  cgrp-plugin.h  cgrp-procdef.c  cgrp-process.c  cgrp-sysmon.c  cgrp-utils.c  curve-test.c  list.h  mm.h  syspart.conf
plugins/console/: Makefile.am  console.c
plugins/context/: Makefile.am  com.nokia.policy.context.context  config-parser.c  context-provider.c  context-provider.h  context.dbus  context.ini
plugins/context/policy-context-client/: context-client.cpp  context-tracker.cpp  context-tracker.h  policy-context-client.pro
plugins/dbus/: Makefile.am  dbus-bus.c  dbus-hash.c  dbus-method.c  dbus-plugin.c  dbus-plugin.h  dbus-signal.c  dbus-watch.c  list.h  mm.h  plugin.c
plugins/dbus-signal/: Makefile.am  dbus-signal-plugin.c  dbus-signal-plugin.h
plugins/delay/: Makefile.am  delay.c  delay.h  fsif.c  fsif.h  request.c  request.h  timer.c  timer.h
plugins/dspep/: Makefile.am  action.c  action.h  dsp.c  dsp.h  dspep.ini  plugin.c  plugin.h
plugins/dvfs/: Makefile.am  dvfs.c  dvfs.ini
plugins/facttool/: Makefile.am  facttool.c  facttool.h
plugins/fmradio/: Makefile.am  fmradio-ep.c  fmradio-hci.c  fmradio-plugin.c  fmradio-plugin.h  mm.h  visibility.h
plugins/fsif/: Makefile.am  fsif.c  fsif.h
plugins/gconf/: Makefile.am  gconf-internal.c  gconf.c  gconf.h
plugins/hal/: Makefile.am  hal-internal.c  hal.c  hal.h
plugins/hal/tests/: Makefile.am  check_hal.c
plugins/mdm/: Makefile.am  dbusif.c  dbusif.h  dresif.c  dresif.h  generate.sh  mdm-audio.conf  mdm.c  mdm.h  ohm-ext-mdm.pc.in  ohm-plugin-mdm.conf  org.freedesktop.ohm.mdm.xml  org.freedesktop.ohm.mdm.xml.h  plugin.c  plugin.h
plugins/media/: Makefile.am  audio.c  audio.h  bluetooth.c  bluetooth.h  dbusif.c  dbusif.h  dresif.c  dresif.h  fsif.c  fsif.h  mute.c  mute.h  plugin.c  plugin.h  privacy.c  privacy.h  resource_control.c  resource_control.h
plugins/notification/: Makefile.am  dbusif.c  dbusif.h  longlive.c  longlive.h  notification.ini  plugin.c  plugin.h  proxy.c  proxy.h  resource.c  resource.h  ruleif.c  ruleif.h  subscription.c  subscription.h
plugins/playback/: Makefile.am  client.c  client.h  dbusif.c  dbusif.h  dresif.c  dresif.h  fsif.c  fsif.h  media.c  media.h  pbreq.c  pbreq.h  playback.c  playback.h  playback.ini  sm.c  sm.h
plugins/profile/: Makefile.am  profile.c  profile.h
plugins/resource/: Makefile.am  auth.c  auth.h  call-test.c  dbusif.c  dbusif.h  dresif.c  dresif.h  fsif.c  fsif.h  internalif.c  internalif.h  manager.c  manager.h  plugin.c  plugin.h  resource-class.c  resource-class.h  resource-set.c  resource-set.h  resource-spec.c  resource-spec.h  resource.c  resource.h  resource.ini  ruleif.c  ruleif.h  timestamp.c  timestamp.h  transaction.c  transaction.h
plugins/route/: Makefile.am  dbusif.c  dbusif.h  dresif.c  dresif.h  generate.sh  ohm-ext-route.pc.in  ohm-plugin-route.conf  org.nemomobile.Route.Manager.xml  org.nemomobile.Route.Manager.xml.h  plugin.c  plugin.h  route.c  route.h
plugins/sensors/: Makefile.am  sensors.c
plugins/signaling/: Makefile.am  signaling-internal.c  signaling-marshal.list  signaling.c  signaling.h
plugins/telephony/: Makefile.am  call.c  dbus.c  policy.c  telephony.c  telephony.h  telephony.pl
plugins/timestamp/: Makefile.am  timestamp.c
plugins/upstart/: Makefile.am  upstart.c
plugins/vibra/: Makefile.am  imts-test.c  mm.h  vibra-driver-immts.c  vibra-driver-mce.c  vibra-driver-null.c  vibra-ep.c  vibra-plugin.c  vibra-plugin.h  vibra.ini  visibility.h
plugins/videoep/: Makefile.am  action.c  action.h  argument.c  argument.h  atom.c  atom.h  config-parser.y  config-private.h  config-scanner.l  config.h  data-types.c  data-types.h  exec.c  exec.h  fbrt.c  fbrt.h  function.c  function.h  mem.c  mem.h  notify.c  notify.h  omapfb.h  plugin.c  plugin.h  property.c  property.h  randr.c  randr.h  resolver.c  resolver.h  router.c  router.h  sequence.c  sequence.h  tracker.c  tracker.h  txparser.c  txparser.h  (+10 more)
plugins/videoep-fremantle/: notify.c  notify.h  txparser.c  txparser.h  videoep.c  videoep.h  xrandrt.c  xrandrt.h  xrt.c  xrt.h
tests/: Makefile.am  footer.partial  hal_tests.partial  header.partial  profile_tests.partial  signaling_tests.partial  tests.xml
(+60 files in other folders)
